crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__modifiers.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"silent unsafe {}\"))"
---
[
    (
        Statement(
            (
                Block(
                    (
                        Block(
                            [
                                (
                                    Silent,
                                    0..6,
                                ),
                                (
                                    Unsafe,
                                    7..13,
                                ),
                            ],
                            [],
                        ),
                        0..16,
                    ),
                ),
                0..16,
            ),
        ),
        0..16,
    ),
]
