crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__mults_and_adds-5.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"3 * 2 - --2 * 2\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Subtract(
                            (
                                Multiply(
                                    (
                                        Number(
                                            (
                                                3.0,
                                                0..1,
                                            ),
                                        ),
                                        0..1,
                                    ),
                                    (
                                        Number(
                                            (
                                                2.0,
                                                4..5,
                                            ),
                                        ),
                                        4..5,
                                    ),
                                ),
                                0..5,
                            ),
                            (
                                Multiply(
                                    (
                                        Neg(
                                            (
                                                "-",
                                                8..9,
                                            ),
                                            (
                                                Neg(
                                                    (
                                                        "-",
                                                        9..10,
                                                    ),
                                                    (
                                                        Number(
                                                            (
                                                                2.0,
                                                                10..11,
                                                            ),
                                                        ),
                                                        10..11,
                                                    ),
                                                ),
                                                10..11,
                                            ),
                                        ),
                                        10..11,
                                    ),
                                    (
                                        Number(
                                            (
                                                2.0,
                                                14..15,
                                            ),
                                        ),
                                        14..15,
                                    ),
                                ),
                                10..15,
                            ),
                        ),
                        0..15,
                    ),
                ),
                0..15,
            ),
        ),
        0..15,
    ),
]
